<resources>
    <string name="app_name">LocalChatting</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Join Chat</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="join_chat">JOIN CHAT</string>
    <string name="IP_address">IP Address</string>
    <string name="port">Port</string>
    <string name="hint_IP">1.1.1.1</string>
    <string name="hint_port">3306</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_text">Enter message</string>
    <string name="send_btn">Send</string>
    <string name="reg_server">Run server</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>